# datasette-short-links

./: Justfile  README.md  pyproject.toml
datasette_short_links/: __init__.py
datasette_short_links/static/: index.js
datasette_short_links/templates/: datasette-short-links-admin.html
tests/: test_short_links.py
